2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (jka-compr-load-suffixes): Add ".zst".

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* init.el: Use `comint-osc-process-output'.
	(+handle-osc-8, +comint-handle-osc-8): Removed

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* init.el (+shellcheck-auto-fix): New command.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* early-init.el: Do not call `straight-use-package' on `straight'
	explicitly.  Load packages.el without suffix.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	New macro `with-no-compile!'

	* site-lisp/dotemacs-core.el (with-no-compile!): New macro.
	* init.el: Use it.

2025-08-19  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-recentf, tui-switch-project): Redirect
	error messages to stderr.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-prefix-map): Bind "U" to
	`+straight-review-updated-repos'.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/good-doc.el (good-doc--local-docs): Fix infinite loop.

2025-08-18  Zhengyi Fu  <i@fuzy.me>

	* init.el (quilt-list-files): New command.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* early-init.el (custom-file): Change to custom.el.zst.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (tool-map): Bind "p" to `tui-switch-project'.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (recentf-save-file, save-place-file)
	(project-list-file, savehist-file): Use zstd to compress the
	files.

2025-08-17  Zhengyi Fu  <i@fuzy.me>

	* init.el (dotemacs-theme-refresh): Force `tab-line-tab-current'
	and `tab-line-tab-inactive' to use white foreground when in dark
	background mode.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (gptel-backend, gptel-model): Set to
	use deepseek-chat.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* packages.el (eat): Fork it.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/tui/tui.el (tui-switch-project): New command.
	(tui--project-callback): New function.

2025-08-16  Zhengyi Fu  <i@fuzy.me>

	* scripts/claude: Add --.
