@@ -1,3 +1,8 @@
+2025-08-20  Zhengyi Fu  <i@fuzy.me>
+
+	* init.el: Do not add ws-butler-mode to find-file-hook any more.
+	Add diff-mode to ws-butler-global-exempt-modes.
+
 2025-08-19  Zhengyi Fu  <i@fuzy.me>
 
 	* early-init.el (jka-compr-load-suffixes): Add ".zst".
